tests/traci/set_variable/Vehicle/ChangeLane/InvalidLaneId/testclient.prog
simstep2 0
setvalue 0xc4 0x13 veh0 <compound> 3 <byte> 100 <double> 100 <byte> 0
simstep2 0
simstep2 0

